// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating should render Rating component with correct props 1`] = `
<div
  className="rating"
>
  <div
    className="star"
    key="0"
  >
    ★
  </div>
  <div
    className="star"
    key="1"
  >
    ★
  </div>
  <div
    className="star"
    key="2"
  >
    ★
  </div>
  <div
    className="star"
    key="3"
  >
    ★
  </div>
  <div
    className="star"
    key="4"
  >
    ★
  </div>
  <div
    className="container"
  >
    <span
      className="number"
    >
      4.5
    </span>
  </div>
</div>
`;

exports[`Rating should render Rating component with not correct props 1`] = `
<div
  className="rating"
>
  <div
    className="container"
  >
    <span
      className="number"
    >
      0.0
    </span>
  </div>
</div>
`;

exports[`Rating should render Rating component without props 1`] = `
<div
  className="rating"
>
  <div
    className="container"
  >
    <span
      className="number"
    >
      0.0
    </span>
  </div>
</div>
`;
